--- a/fits.tex
+++ b/fits.tex
@@ -348,7 +348,7 @@ Australia\newline
 \makeatletter
 \makeatother
 \makeatletter
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[enhanced, interior hidden, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, breakable, sharp corners, frame hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, sharp corners, interior hidden, enhanced, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, breakable]}{\end{tcolorbox}}\fi
 \makeatother
 \makeatletter
 \makeatother
@@ -368,46 +368,72 @@ blah, blah
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
-Not just about covid. How to handle forecasting when there has been a
-period of major structural change.
+Time series are sometimes interrupted by unusual events; for example, a
+natural disaster may occur, or a there may be a temporary policy change.
+Many forecasters have faced this issue recently with the COVID-19
+pandemic, where historical patterns may have been severely disrupted due
+to lockdowns and other restrictions. In this paper, we consider the
+problem of forecasting after such an event has occurred.
 
-Not interested in identifying structural breaks -- we know they have
-occured. How to forecast in the presence of such change.
+This is a different problem from change point detection. In the
+situations we consider, we know that a change has occurred, and we want
+to forecast the future after the change. Change point detection is about
+identifying when a change has occurred.
 
-Covid has provided one example that is affecting many forecasters around
-the world. But similar ideas needed in many other contexts.
+The changes in the series as a result of the disruption may be
+relatively simple, for example a left shift at the start of the
+disruption, and another at the end of the disruption. Or they may be
+more complex, with changes to the seasonal patterns, and changes to the
+level, which evolve over time. In this paper, we consider a range of
+models that can be used to handle such changes, and compare their
+performance on some real data sets.
 
 Time series models usually assume that the future is similar to the
 past, at least in how the data evolve. But a big event like covid makes
 the future different from the past, at least in the short term.
 
-\hypertarget{handling-covid-effects-when-forecasting}{%
-\section{Handling covid effects when
-forecasting}\label{handling-covid-effects-when-forecasting}}
+\hypertarget{handling-interruptions-when-forecasting}{%
+\section{Handling interruptions when
+forecasting}\label{handling-interruptions-when-forecasting}}
 
-Some options are:
+We consider several possible ways to handle interruptions when
+forecasting.
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  Use a highly adaptive model -- e.g., ETS with large smoothing
-  parameters
-\end{enumerate}
+\hypertarget{use-a-highly-adaptive-model}{%
+\subsection{Use a highly adaptive
+model}\label{use-a-highly-adaptive-model}}
 
-Advantages: simple, easy to implement, fast to compute.
+Highly adaptive models can adjust to the interruption as it is
+happening, and will therefore be able to approximate the data generating
+process relatively well. For example, an ETS model with large smoothing
+parameters will be able to adjust to the interruption relatively
+quickly. This has the advantage of being a very simple solution that is
+easy to implement and fast to compute.
 
-Disadvantages: large prediction intervals, because the model is
-downweighting the past data. Fails to remember things before the change.
-Also, the model may not adapt quickly enough to the change.
+However, the prediction intervals will be large, because the model will
+have heavily discounted past data. In fact, the model will largely
+forget the past data other than the most recent observations, so there
+is no memory of the seasonal patterns and other dynamics that were
+present before the interruption. Consequently, the approach works best
+if there is no assumption that the post-interruption period will be
+similar to the pre-interruption period.
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\setcounter{enumi}{1}
-\tightlist
-\item
-  Use a dynamic regression model with intervention covariates
-\end{enumerate}
+\hypertarget{use-a-dynamic-regression-model-with-intervention-covariates}{%
+\subsection{Use a dynamic regression model with intervention
+covariates}\label{use-a-dynamic-regression-model-with-intervention-covariates}}
+
+A dynamic regression model with intervention covariates can be used to
+model the interruption explicitly. For example, if the intervention
+involves a simple level shift, with a reverse level shift at the end of
+the intervention, we can use a dummy variable to indicate the
+interruption period, and allow the model to adjust to the interruption.
+More complicated interventions can be handled by using more covariates.
+
+This has the advantage of retaining the memory of the past, and so the
+seasonal patterns and other dynamics will be retained. However, the
+model will assume that the post-interruption period will be similar to
+the pre-interruption period, and so the prediction intervals may be be
+too narrow.
 
 Advantages: retains full memory of the past, and allows the change
 period to be effectively modelled provided you choose the covariates
@@ -417,14 +443,10 @@ Disadvantages: requires a lot of thought to choose the covariates well.
 Assumes that the post-pandemic period will be similar to the
 pre-pandemic period.
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\setcounter{enumi}{2}
-\tightlist
-\item
-  Treat the covid period as missing and use a model that handles missing
-  values
-\end{enumerate}
+\hypertarget{treat-the-covid-period-as-missing-and-use-a-model-that-handles-missing-values}{%
+\subsection{Treat the covid period as missing and use a model that
+handles missing
+values}\label{treat-the-covid-period-as-missing-and-use-a-model-that-handles-missing-values}}
 
 Advantages: effectively ignores the change period
 
@@ -432,13 +454,9 @@ Disadvantages: throws away the covid-period data, and so starts the
 post-covid period with no recent history. Therefore prediction intervals
 will be relatively large.
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\setcounter{enumi}{3}
-\tightlist
-\item
-  Estimate what might have been and adjust the data
-\end{enumerate}
+\hypertarget{estimate-what-might-have-been-and-adjust-the-data}{%
+\subsection{Estimate what might have been and adjust the
+data}\label{estimate-what-might-have-been-and-adjust-the-data}}
 
 Advantages: relatively simple and doesn't throw away the covid-period
 data.
@@ -446,6 +464,9 @@ data.
 Disadvantages: need to have good estimates of covid-period data, and
 that may be difficult to obtain. Forecasts are conditional on the
 estimates being correct.
+
+\hypertarget{examples}{%
+\section{Examples}\label{examples}}
 
 \hypertarget{example-ambulance-attendances}{%
 \subsection{Example: Ambulance
