--- a/fits.tex
+++ b/fits.tex
@@ -348,7 +348,7 @@ Australia\newline
 \makeatletter
 \makeatother
 \makeatletter
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, sharp corners, interior hidden, enhanced, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, breakable]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, borderline west={3pt}{0pt}{shadecolor}, breakable, interior hidden, enhanced, sharp corners, frame hidden]}{\end{tcolorbox}}\fi
 \makeatother
 \makeatletter
 \makeatother
@@ -467,6 +467,9 @@ estimates being correct.
 
 \hypertarget{examples}{%
 \section{Examples}\label{examples}}
+
+\hypertarget{australian-tourism}{%
+\subsection{Australian tourism}\label{australian-tourism}}
 
 \hypertarget{example-ambulance-attendances}{%
 \subsection{Example: Ambulance
