--- a/fits.tex
+++ b/fits.tex
@@ -348,7 +348,7 @@ Australia\newline
 \makeatletter
 \makeatother
 \makeatletter
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, borderline west={3pt}{0pt}{shadecolor}, breakable, interior hidden, enhanced, sharp corners, frame hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, frame hidden, enhanced, boxrule=0pt, interior hidden, borderline west={3pt}{0pt}{shadecolor}, sharp corners]}{\end{tcolorbox}}\fi
 \makeatother
 \makeatletter
 \makeatother
@@ -470,6 +470,10 @@ estimates being correct.
 
 \hypertarget{australian-tourism}{%
 \subsection{Australian tourism}\label{australian-tourism}}
+
+\includegraphics{fits_files/figure-pdf/austa-1.pdf}
+
+\includegraphics{fits_files/figure-pdf/austa-2.pdf}
 
 \hypertarget{example-ambulance-attendances}{%
 \subsection{Example: Ambulance
