More work on the tourism example

--- a/references.bib
+++ b/references.bib
@@ -5,3 +5,13 @@
   title = {Overseas Arrivals and Departures, Australia},
   url = "https://www.abs.gov.au/statistics/industry/tourism-and-transport/overseas-arrivals-and-departures-australia/may-2023"
 }
+
+@book{fpp3,
+  title     = {Forecasting: principles and practice},
+  author    = {Rob J Hyndman and George Athanasopoulos},
+  year      = 2021,
+  publisher = {OTexts},
+  url       = {http://OTexts.org/fpp3},
+  edition   = {3rd ed},
+  address   = {Melbourne, Australia}
+}
