--- a/fits.tex
+++ b/fits.tex
@@ -349,7 +349,7 @@ Australia\newline
 \makeatletter
 \makeatother
 \makeatletter
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, sharp corners, enhanced, breakable, frame hidden, interior hidden, boxrule=0pt]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, boxrule=0pt, borderline west={3pt}{0pt}{shadecolor}, frame hidden, enhanced, breakable, sharp corners]}{\end{tcolorbox}}\fi
 \makeatother
 \makeatletter
 \makeatother
@@ -489,8 +489,7 @@ are shown in Figure~\ref{fig-tourism_plot1}. As the borders closed in
 March 2020, the number of visitors to Australia dropped to near zero,
 and remained there until towards the end of 2021. The borders officially
 reopened on 21 February 2022, although it seems visitors began to arrive
-earlier than that. The data are available from the Australian Bureau of
-Statistics.
+earlier than that.
 
 \begin{figure}
 
@@ -503,10 +502,15 @@ Australia (monthly): Jan 2000 -- May 2023.}
 
 \end{figure}
 
-We will apply each of the approaches above to this data set, and compare
-their performance.
+We apply the four solutions discussed in the previous section to these
+data, making 12 month forecasts at the end of each year from 2019 to
+2022. We fit ETS, ARIMA and dynamic ARIMA models to the data
+\autocite{fpp3}, first applying a log transformation to ensure the
+resulting forecasts are positive. This is possible, because the
+observations never reach exactly zero, with the smallest number of
+visitors per month equal to 2250 in April 2020.
 
-\begin{figure}
+\begin{figure}[t]
 
 {\centering \includegraphics{fits_files/figure-pdf/fig-tsol1_plot-1.pdf}
 
@@ -518,43 +522,94 @@ and I don't know why.}
 
 \end{figure}
 
-\begin{figure}
+In Figure~\ref{fig-tsol1_plot}, we show forecasts by applying ETS and
+ARIMA models to the data. ETS, in particular, is well-known to be
+relatively adaptive to changes in the series, and this is evident in
+these forecasts. The forecasts for 2020 were made using data before
+COVID-19 had any affect, and so they show similar patterns to the past.
+The forecasts for 2021 were made after 9 months of very low levels of
+arrivals, and both models show forecasts consistent with the recent
+history. The use of logarithms is particularly important here as the
+variance is much smaller during 2020 than previously, but after taking
+logarithms, the variance is more stable over time. The forecasts made at
+the start of 2022 have struggled to detect the small increase in traffic
+at the end of 2021, and both models have forecast relatively flat
+trajectories as a result, although the prediction intervals are wide
+indicating model uncertainty. Finally, the forecasts made at the end of
+2022 have captured the increasing trend, but ETS is much closer to the
+reality, adapting more quickly to the changing patterns. Again, the wide
+prediction intervals indicate a high level of uncertainty. It is
+possible to make ETS more adaptive to changes in the data by increasing
+the value of the smoothing parameters. For example, a high value of
+\(\beta\) (the smoothing parameter for the slope), will result in
+changes of trend being incorporated into the forecasts more quickly, at
+the risk of over-reacting to noise in the data.
+
+\begin{figure}[t]
 
 {\centering \includegraphics{fits_files/figure-pdf/fig-tsol2_plot-1.pdf}
 
 }
 
-\caption{\label{fig-tsol2_plot}Solution 2. We use a left shift in March
-2020, and a ramp from November 2022. We possibly need to stop the ramp
-around mid 2023.}
+\caption{\label{fig-tsol2_plot}Solution 2. We use a left shift from
+March 2020 to October 2022, and a ramp from October 2021 to October
+2022. After October 2022, there are no non-zero predictors.}
 
 \end{figure}
 
-\begin{figure}
+Figure~\ref{fig-tsol2_plot} shows forecasts obtained using a dynamic
+regression model (i.e., a regression with ARIMA errors) using two
+intervention variables: a level shift from March 2022 to November 2022,
+and a ramp from October 2021 to November 2022. It is evident that the
+level shift variable has worked well, giving relatively good forecasts
+for 2021. However, the forecasts for 2022 are particularly poor, because
+the ramp slope has been greatly overestimated, as it was based on only
+three observations (Oct -- Dec 2021). The forecasts for 2023 are much
+better, and the relatively large prediction intervals are appropriate
+given the uncertainty in the industry at the end of 2022.
+
+\begin{figure}[t]
 
 {\centering \includegraphics{fits_files/figure-pdf/fig-tsol3_plot-1.pdf}
 
 }
 
 \caption{\label{fig-tsol3_plot}Solution 3. The period from March 2020 to
-November 2022 is set to missing. So the first three years of forecasts
+October 2022 is set to missing. So the first three years of forecasts
 show what might have been. The fourth set of forecasts uses observations
 from November and December 2022, and so the forecasts have been adjusted
 downwards.}
 
 \end{figure}
 
-\begin{figure}
+The third solution involved setting the observations during the
+disruption period to missing, and then fitting an ARIMA model to the
+series. Consequently, the first three years of forecasts show what might
+have been without the COVID-19 pandemic, based on the history to the end
+of 2019. The final forecasts for 2023 use the data to the end of 2019,
+and the two observations in November and December 2022. These are much
+better, but the prediction intervals are too narrow, as there hasn't
+been sufficient recent data.
+
+\begin{figure}[t]
 
 {\centering \includegraphics{fits_files/figure-pdf/fig-tsol4_plot-1.pdf}
 
 }
 
 \caption{\label{fig-tsol4_plot}Solution 4. We replace the observations
-from March 2020 to November 2022 with the average of the same month in
+from March 2020 to October 2022 with the average of the same month in
 the 3 preceding years.}
 
 \end{figure}
+
+Finally, we show in Figure~\ref{fig-tsol4_plot} the forecasts obtained
+using solution 4. Here we have replaced observations between March 2020
+and October 2022 with estimates based on the average of the same month
+in the three preceding years. The resulting forecasts are similar to
+those from solution 3, but with narrower prediction intervals because
+the model is (falsely) assuming that the ``observations'' during the
+disruption are real.
 
 \FloatBarrier
 
